<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conver_from_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/amount_text_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="1.0"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unit_type_spinner"
        android:layout_below="@+id/amount_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/unit_type_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="2"
        android:rowCount="6"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="#ffddd6ff">

        <TextView android:id="@+id/tsp_text_view"
            android:text="@string/default_teaspoon_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView android:id="@+id/cup_text_view"
            android:text="@string/default_cup_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

        <TextView android:id="@+id/tbs_text_view"
            android:text="@string/devault_tbs_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView android:id="@+id/oz_text_view"
            android:text="@string/default_oz_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

        <TextView android:id="@+id/kg_text_view"
            android:text="@string/default_kg_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView android:id="@+id/quart_text_view"
            android:text="@string/default_quat_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

    </GridLayout>

</RelativeLayout>
